--- a/style.css
+++ b/style.css
@@ -4,13 +4,10 @@
   box-sizing: border-box;
   font-family: Arial, sans-serif;
 }
-
 body {
   line-height: 1.6;
   color: #333;
 }
-
-/* Navbar */
 .navbar {
   background: #fff;
   padding: 0% 0;
@@ -39,7 +36,6 @@ body {
   color: #333;
   transition: color 0.10s ease, padding 0.5s ease; 
 }
-
 .nav-links a:hover {
   color: #f4a100;
   padding-bottom: 5px;
@@ -54,7 +50,6 @@ body {
 .btn-secondary {
   background: #333;
 }
-
 .home{
   background-image: url("images/x.jpg");
   background-repeat: no-repeat;
@@ -67,7 +62,6 @@ body {
   text-align: left;
   padding-left: 8%;
 }
-
 .home-text h3 {
   font-weight: 400;
 }
@@ -78,8 +72,6 @@ body {
 .home-buttons {
   margin-top: 1rem;
 }
-
-/* Section titles */
 .section-subtitle {
   color: #666;
   text-align: center;
@@ -94,8 +86,6 @@ body {
 .center {
   text-align: center;
 }
-
-
 .container {
   width: 90%;
   margin: auto;
@@ -111,15 +101,13 @@ body {
   grid-template-columns: repeat(3, 1fr);
   gap: 1.5rem;
 }
-
-/* Cards */
-.card {
+.box {
   background: #fff;
   padding: 1.5rem;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0,0,0,0.05);
 }
-.card-img{
+.box-img{
     width: 100%;
     height: 200px;
     object-fit: cover;
@@ -130,8 +118,6 @@ body {
   width: 100px;
   margin-bottom: 15px;
 }
-
-
 .about-us{
     padding-bottom: 15px;
     text-align: center;
@@ -146,11 +132,9 @@ body {
   margin-top: 40px;
   flex-direction: row-reverse;
 }
-
 .about-text {
   flex: 1;
 }
-
 .about-text h4 {
   display: inline-block;
   background: #f4a100;
@@ -163,19 +147,16 @@ body {
   text-transform: uppercase;
   padding-left: 50px;
 }
-
 .about-text h2 {
   font-size: 2rem;
   margin-bottom: 20px;
   color: #333;
 }
-
 .about-text p {
   margin-bottom: 15px;
   color: #555;
   line-height: 1.7;
 }
-
 .about-text .btn {
   display:inline-block;
   padding: 10px 20px;
@@ -187,24 +168,18 @@ body {
   transition: background 0.3s ease;
   margin: 20px auto;
 }
-
 .about-text .btn:hover {
   background: #d48900;
 }
-
 .about-image {
   flex: 1;
   text-align: center;
 }
-
 .about-image img {
   max-width: 100%;
   border-radius: 10px;
   box-shadow: 0px 5px 15px rgba(0,0,0,0.1);
 }
-
-
-/* Stats */
 .stats {
   background: #e4dbdb;
   padding: 2rem 0;
@@ -214,8 +189,6 @@ body {
   font-size: 2rem;
   color: #f4a100;
 }
-
-/* Mission */
 .mission {
   text-align: center;
 }
@@ -227,7 +200,6 @@ body {
     margin-bottom: 1rem;
 }
 
-/* Volunteers */
 .volunteers {
   text-align: center;
 }
@@ -242,8 +214,6 @@ body {
   color: #f4a100;
   margin-bottom: 0.5rem;
 }
-
-/* CTA */
 .cta {
   background: url("images/c.webp");
   background-repeat: no-repeat;
@@ -264,8 +234,6 @@ body {
 .cta .btn {
   margin: 0.5rem;
 }
-
-/* Footer */
 .footer {
   background: #ffffff;
   color: #000000;
