--- a/style.css
+++ b/style.css
@@ -9,9 +9,13 @@ body {
   color: #333;
 }
 .navbar {
-  background: #fff;
-  padding: 0% 0;
-  border-bottom: 1px solid #ddd;
+  background: transparent;  
+  position: absolute;      
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  padding: 1rem 0;
 }
 .nav-content {
   display: flex;
@@ -33,8 +37,8 @@ body {
 }
 .nav-links a {
   text-decoration: none;
-  color: #333;
-  transition: color 0.10s ease, padding 0.5s ease; 
+  color: #fff;             
+  transition: color 0.3s ease;
 }
 .nav-links a:hover {
   color: #f4a100;
@@ -56,11 +60,16 @@ body {
   background-position: center center;
   background-size: cover;
   color: #fff;
-  height: 90vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   text-align: left;
   padding-left: 8%;
+}
+
+.home-text {
+position: relative;
+top: 80px;  
 }
 .home-text h3 {
   font-weight: 400;
@@ -119,7 +128,7 @@ body {
   margin-bottom: 15px;
 }
 .about-us{
-    padding-bottom: 15px;
+    padding-bottom: 0px;
     text-align: center;
     font-size: 2.5rem;
 }
@@ -166,7 +175,7 @@ body {
   text-decoration: none;
   font-weight: 600;
   transition: background 0.3s ease;
-  margin: 20px auto;
+  margin: 20px 180px;
 }
 .about-text .btn:hover {
   background: #d48900;
@@ -214,7 +223,7 @@ body {
   color: #f4a100;
   margin-bottom: 0.5rem;
 }
-.cta {
+.last{
   background: url("images/c.webp");
   background-repeat: no-repeat;
   background-position: center center;
@@ -225,13 +234,13 @@ body {
   justify-content: center;
   text-align: center;
 }
-.cta h2{
+.last h2{
     color:#ffffff;
 }
-.cta h3{
+.last h3{
     color:#ffffff;
 }
-.cta .btn {
+.last .btn {
   margin: 0.5rem;
 }
 .footer {
@@ -272,7 +281,6 @@ body {
   .donate-btn {
     margin-top: 1rem;
   }
-  
   .home {
     text-align: center;
     padding: 2rem 1rem;
@@ -281,18 +289,14 @@ body {
   .home-text h1 {
     font-size: 2rem;
   }
-
   .grid-4,
   .grid-3 {
     grid-template-columns: 1fr;
   }
-
   
   .stats .grid-4 {
     grid-template-columns: repeat(2, 1fr);
   }
-
-  
   .about-container {
     flex-direction: column;
     text-align: center;
